#32: Fix more spacing

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -52,11 +52,12 @@ $theme-colors: ("primary": $blue,
 
 $body-bg: $gray-100;
 
+$spacer: 1.2rem;
 // Grid
 $container-max-widths: (sm: 540px,
 md: 720px,
 lg: 960px,
-xl: 1200px);
+xl: 1224px);
 $grid-gutter-width: 24px;
 // Links
 $link-color: $blue-dark;
